force-app/main/default/objects/copado__Compliance_Rule__c/fields/copado__Severity__c.field-meta.xml
<CustomField>
    <fullName>copado__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copado__Compliance_Severity</valueSetName>
    </valueSet>
</CustomField>