force-app/main/default/objects/copado__Compliance_Rule__c/validationRules/copado__Required_Criteria_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Required_Criteria_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISPICKVAL(copado__Matching_Criteria__c ,&quot;&quot;),
ISPICKVAL(copado__Record_Count_Criteria__c,&quot;&quot;),
ISNULL(copado__Record_Count__c),
ISBLANK(copado__Record_Count__c))</errorConditionFormula>
    <errorMessage>Matching Criteria, Record Count and Record Count Criteria are required fields.</errorMessage>
</ValidationRule>